Bug 448483 - On loading some Toolbar Icons are missing EXCEPT in hover state. The Brush tool also missing except in hover state
Summary: On loading some Toolbar Icons are missing EXCEPT in hover state. The Brush to...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: * Unknown (other bugs)
Version First Reported In: 5.0.2
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Alvin Wong
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-14 17:48 UTC by Kit
Modified: 2022-01-15 11:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Image of toolbar (41.87 KB, image/jpeg)
2022-01-14 17:48 UTC, Kit
Details
attachment-2900-0.html (2.24 KB, text/html)
2022-01-14 20:47 UTC, Kit
Details
attachment-13661-0.html (2.31 KB, text/html)
2022-01-15 11:35 UTC, Kit
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kit 2022-01-14 17:48:36 UTC
Created attachment 145469 [details]
Image of toolbar

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1.  Load Krita


OBSERVED RESULT
On loading some Toolbar Icons are missing EXCEPT in hover state. The Brush tool also missing except in hover state

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Alvin Wong 2022-01-14 18:17:58 UTC
Hi, it really looks like that your Krita install isn't complete and there are files missing in the application folder. Are you using the installer version or the portable zip package? In any case, I would first suggest you close Krita, then re-download the installer or package and try to make sure the download is complete (the file should be over 120MB), and re-install Krita with the newly downloaded file.
Comment 2 Kit 2022-01-14 20:47:46 UTC
Created attachment 145471 [details]
attachment-2900-0.html

Thanks Alvin, I was using the windows 64 bit
installer krita-x64-5.0.2-setup.exe from
https://krita.org/en/download/krita-desktop/
I downloaded it twice but I will try a zip or the windows store
Many thanks
Kit

On Fri, 14 Jan 2022 at 18:18, Alvin Wong <bugzilla_noreply@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=448483
>
> Alvin Wong <alvin@alvinhc.com> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>                  CC|                            |alvin@alvinhc.com
>                  OS|All                         |Microsoft Windows
>            Platform|Compiled Sources            |Microsoft Windows
>
> --- Comment #1 from Alvin Wong <alvin@alvinhc.com> ---
> Hi, it really looks like that your Krita install isn't complete and there
> are
> files missing in the application folder. Are you using the installer
> version or
> the portable zip package? In any case, I would first suggest you close
> Krita,
> then re-download the installer or package and try to make sure the
> download is
> complete (the file should be over 120MB), and re-install Krita with the
> newly
> downloaded file.
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 3 Alvin Wong 2022-01-14 22:30:26 UTC
Ah, I managed to reproduce the issue by messing with the theme setting in the config file. Turns out if the theme is empty, the icons will end up using the dark variant (light coloured) which is very close to the window background colour. They aren't actually missing, but just invisible from the attached screenshot of the report due to JPEG compression.

(If the theme refers to a non-existing theme, on the first startup the icons are still the light variant, but an empty string is saved into the theme config which makes the issue appear on the next run.)

---

@Kit If you open the "Settings -> Theme" menu and select a theme then restart Krita, the icons should reappear.
Comment 4 Alvin Wong 2022-01-14 22:34:13 UTC
Git commit 5a91ec5834b5ef57355eb22e43adca397178dc68 by Alvin Wong.
Committed on 14/01/2022 at 22:32.
Pushed by alvinwong into branch 'master'.

Fix default theme not applied if config value is empty

M  +1    -1    libs/ui/thememanager.cpp

https://invent.kde.org/graphics/krita/commit/5a91ec5834b5ef57355eb22e43adca397178dc68
Comment 5 Alvin Wong 2022-01-14 22:34:53 UTC
Git commit a9c25c32e44237ba4f97d45066e183a12b9506b8 by Alvin Wong.
Committed on 14/01/2022 at 22:34.
Pushed by alvinwong into branch 'krita/5.0'.

Fix default theme not applied if config value is empty
(cherry picked from commit 5a91ec5834b5ef57355eb22e43adca397178dc68)

M  +1    -1    libs/ui/thememanager.cpp

https://invent.kde.org/graphics/krita/commit/a9c25c32e44237ba4f97d45066e183a12b9506b8
Comment 6 Kit 2022-01-15 11:35:36 UTC
Created attachment 145489 [details]
attachment-13661-0.html

Genius! You're a star Alvin and thanks for persevering, that would not have
occurred to me in decades but makes complete sense now
Thanks again
kit

On Fri, 14 Jan 2022 at 22:30, Alvin Wong <bugzilla_noreply@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=448483
>
> Alvin Wong <alvin@alvinhc.com> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>            Assignee|krita-bugs-null@kde.org     |alvin@alvinhc.com
>      Ever confirmed|0                           |1
>              Status|REPORTED                    |ASSIGNED
>
> --- Comment #3 from Alvin Wong <alvin@alvinhc.com> ---
> Ah, I managed to reproduce the issue by messing with the theme setting in
> the
> config file. Turns out if the theme is empty, the icons will end up using
> the
> dark variant (light coloured) which is very close to the window background
> colour. They aren't actually missing, but just invisible from the attached
> screenshot of the report due to JPEG compression.
>
> (If the theme refers to a non-existing theme, on the first startup the
> icons
> are still the light variant, but an empty string is saved into the theme
> config
> which makes the issue appear on the next run.)
>
> ---
>
> @Kit If you open the "Settings -> Theme" menu and select a theme then
> restart
> Krita, the icons should reappear.
>
> --
> You are receiving this mail because:
> You reported the bug.