Fix default theme not applied if config value is empty

BUG:448483